<resources>
    <string name="app_name">GoPlaces</string>
    <!-- LOGIN -->
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrar-se</string>
    <!-- REGISTER -->
    <string name="full_name">Nome completo</string>
    <string name="username">Nome de usuário</string>
    <string name="create_account">Criar conta</string>
    <!-- MENU -->
    <string name="home">Início</string>
    <string name="map">Mapa</string>
    <string name="following">Seguindo</string>
    <string name="favorites">Favoritos</string>
    <string name="profile">Perfil</string>
    <string name="hello_blank_fragment">Teste</string>
    <string name="save">Salvar</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="logout">Sair</string>
    <string name="new_review">Nova Review</string>
    <string name="description">Descrição</string>
    <string name="city">Cidade</string>
    <string name="country">País</string>
</resources>