<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.EditProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="100dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_profile_outline"
                    app:tint="@color/purple" />
            </androidx.cardview.widget.CardView>
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:hint="@string/full_name" />
            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="8dp"
                android:layout_marginTop="12dp"
                android:padding="16dp"
                android:hint="@string/username" />
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:layout_marginTop="12dp"
                android:padding="16dp"
                android:enabled="false"
                android:clickable="false"
                android:hint="@string/email" />
            <android.widget.Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/save" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/ProgressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>